# AHTML

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LANGUAGE.md  LICENSE  MARKETING.md  NEWSLETTER-MAILTO.md  NEWSLETTER-PITCH.md  PACKAGES.md  PLAN-NEXT-5.md  PLAN.md  POST-BRIEF.md  README.md  REPORT-POST-1.0.md  ROADMAP.md  SECURITY.md  SPEC.md  TASKS.md  TESTING.md  WHY-AHTML.md  benchmark-results-llm.md  benchmark-results.md  llms-full.txt  llms.txt  package-lock.json  package.json  tsconfig.base.json
.claude/: settings.json
.github/workflows/: ci.yml  landing-preview.yml  (+3 more)
build-tools/: cjs-postbuild.mjs  smoke-imports.mjs
docs/: agents.md  compare.md  conformance.md  did-web.md  edge.md  errors.md  faq.md  observability.md  plugins.md  recipes.md  signing.md  streaming.md
python/: README.md  pyproject.toml
python/src/ahtml/: __init__.py  _json.py  client.py  did_web.py  errors.py  format_compact.py  format_json.py  langchain.py  policy_presets.py  sign.py  snapshot.py  snapshot_ops.py  tokens.py  workflow.py
python/tests/: _gen_fixtures.mjs  _gen_signed.mjs  shim_py.py  test_action_safety.py  test_client_cache.py  test_dry_run_policy.py  test_live_landing.py  test_roundtrip.py  test_tokens_and_langchain.py  test_verify.py
python/tests/fixtures/: document.json  document.txt  empty.json  empty.txt  manifest.json  mixed_entities.fromcompact.json  mixed_entities.json  mixed_entities.txt  product_full.fromcompact.json  product_full.json  product_full.jws  product_full.txt  signer.pub.jwk.json  unicode.json  unicode.txt  wrong.pub.jwk.json
(+121 files in other folders)
