[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ahtml"
version = "1.0.0"
description = "Python consumer SDK for the AHTML protocol — parse, fetch, verify, and safely act on agent-facing web snapshots."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AHTML contributors" }]
keywords = ["ahtml", "agents", "llm", "snapshot", "jws"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "httpx>=0.24",
  "cryptography>=41",
]

[project.optional-dependencies]
tokens = ["tiktoken>=0.5"]
langchain = ["langchain-core>=0.1"]

[project.urls]
Homepage = "https://github.com/DibbayajyotiRoy/AHTML"
Specification = "https://github.com/DibbayajyotiRoy/AHTML/blob/main/SPEC.md"

[tool.hatch.build.targets.wheel]
packages = ["src/ahtml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
